added items to water intake folder

--- a/Calculators/Water_intake_Calculator/index.html
+++ b/Calculators/Water_intake_Calculator/index.html
@@ -10,6 +10,22 @@
 </head>
 
 <body>
+    <div class="background"></div>
+    <div class="title">
+        <h2>Daily Water Intake Calculator</h2>
+    </div>
+    <div class="component_grid">
+        <div class="form">
+            <form action="/action_page.php">
+                <label for="fname">First name:</label><br>
+                <input type="text" id="fname" name="fname" value="John"><br>
+                <label for="lname">Last name:</label><br>
+                <input type="text" id="lname" name="lname" value="Doe"><br><br>
+                <input type="submit" value="Submit">
+            </form>
+        </div>
+        <div class="result"></div>
+    </div>
     <script src="calc.js"></script>
 </body>
 
